[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Menu/MenuBackground.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu/MainMenu.gdshader" type="Shader" id=5]
[ext_resource path="res://Scenes/Menu/PlayButtonNormal.tres" type="StyleBox" id=6]
[ext_resource path="res://MusicSounds/Music/suspense-dark-ambient-8413.mp3" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/tiled_factor = Vector2( 1, 1 )
shader_param/aspect_ratio = 1.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.021978, 1 )
colors = PoolColorArray( 0.462891, 0.0397797, 0.0397797, 1, 0.998047, 0.0935669, 0.0935669, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.6
flag_disable_z = true
spread = 83.3
gravity = Vector3( 0, 70, 0 )
initial_velocity = -10.0
initial_velocity_random = 1.0
angular_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 30.16
linear_accel_random = 0.13
radial_accel = 20.0
angle = 137.1
scale = 15.0
scale_random = 0.5
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.6
flag_disable_z = true
spread = 83.3
gravity = Vector3( 0, 70, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 30.16
linear_accel_random = 0.13
radial_accel = 20.0
angle = 137.1
scale = 15.0
scale_random = 0.5
color_ramp = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.545098, 0.0745098, 0.501961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.937255, 0.666667, 0.6, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 30.0
expand_margin_right = 30.0
expand_margin_top = 5.0
shadow_color = Color( 0.160784, 0.0196078, 0.105882, 0.737255 )
shadow_size = 8
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.301961, 0.027451, 0.286275, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.105882, 0.992157, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 30.0
expand_margin_right = 30.0
expand_margin_top = 5.0
shadow_color = Color( 0.160784, 0.0196078, 0.105882, 1 )
shadow_size = 8
shadow_offset = Vector2( 5, 5 )

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.545098, 0.0745098, 0.501961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.937255, 0.666667, 0.6, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 5.0
shadow_color = Color( 0.160784, 0.0196078, 0.105882, 0.737255 )
shadow_size = 8
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.301961, 0.027451, 0.286275, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.105882, 0.992157, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 5.0
shadow_color = Color( 0.160784, 0.0196078, 0.105882, 1 )
shadow_size = 8
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.301961, 0.027451, 0.286275, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.984314, 0.0705882, 0.0313726, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 5.0
shadow_color = Color( 0.160784, 0.0196078, 0.105882, 0.415686 )
shadow_size = 8
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Environment" id=13]
background_mode = 4
glow_enabled = true
glow_bloom = 0.5

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0117647, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CenterContainer2"]
material = SubResource( 1 )
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 179.0
margin_top = 80.0
margin_right = 1117.0
margin_bottom = 215.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 922.0
margin_bottom = 135.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 922.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 922.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 7.58, 5.08, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.556863, 0.321569, 1 )
custom_constants/shadow_offset_x = 9
custom_constants/shadow_offset_y = 3
text = "A Dead Sunrise"

[node name="Blood1" type="Particles2D" parent="."]
position = Vector2( 324.196, 179.707 )
amount = 20
lifetime = 2.0
process_material = SubResource( 4 )

[node name="Blood2" type="Particles2D" parent="."]
position = Vector2( 1096.93, 183.254 )
amount = 20
lifetime = 2.0
process_material = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.67837
margin_top = 3.05176e-05
margin_right = -4.67834
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 465.0
margin_top = 317.0
margin_right = 814.0
margin_bottom = 402.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 349.0
margin_bottom = 85.0

[node name="Play_Button" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 349.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 79.8, 63.45, 0, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.941176, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.917647, 0.529412, 1 )
shortcut = SubResource( 9 )
text = "    Play    "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 85.316
margin_bottom = 170.316
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 85.0

[node name="OptionButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 475.0
margin_right = 804.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 38.39, 32.49, 0.1, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.941176, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.917647, 0.529412, 1 )
text = "  Option  "

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 565.252
margin_right = 1280.0
margin_bottom = 650.252
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
margin_right = 1280.0
margin_bottom = 85.0

[node name="QuitButton" type="Button" parent="VBoxContainer2/CenterContainer"]
margin_left = 478.0
margin_right = 802.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 65.66, 51.78, 0.1, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.941176, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.917647, 0.529412, 1 )
text = "   Quit    "

[node name="Bgmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
